# vscode-helloworld-multi-arch-build-macos

./: .gitignore  .pre-commit-config.yaml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  helloworld.c
test/: CTestTestfile.cmake
test/fixtures/: inputOutputTest.txt  largeInputTest.txt
